--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Bocanada <24578415+Bocanada@users.noreply.github.com>"]
 python = "^3.9"
 pandas = "^1.2.4"
 openpyxl = "^3.0.7"
+rich = "^10.4.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
