--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "ayed"
-version = "0.1.0"
-description = ""
+version = "0.5.0"
+description = "AyED Tools"
 authors = ["Bocanada <24578415+Bocanada@users.noreply.github.com>"]
 
 [tool.poetry.dependencies]
@@ -14,6 +14,9 @@ rich = "^10.4.0"
 pytest = "^5.2"
 mypy = "^0.902"
 black = "^21.6b0"
+
+[tool.poetry.scripts]
+ayed = 'ayed.tool:main'
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
