--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "ayed"
-version = "0.5.2"
+version = "0.6.0"
 description = "AyED Tools"
 repository = "https://github.com/Bocanada/AyED-Tool"
 authors = ["Bocanada <24578415+Bocanada@users.noreply.github.com>"]
@@ -21,7 +21,7 @@ mypy = {git = "https://github.com/python/mypy"}
 flake8-bugbear = "^21.4.3"
 
 [tool.poetry.scripts]
-ayed = 'ayed.tool:main'
+ayed = 'ayed.tool:app'
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
