--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pytest = "^5.2"
 black = "^21.6b0"
 mypy = {git = "https://github.com/python/mypy"}
 flake8-bugbear = "^21.4.3"
+typer-cli = "^0.0.11"
 
 [tool.poetry.scripts]
 ayed = 'ayed.tool:app'
