--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -25,9 +25,7 @@ jobs:
         python-version: '3.9'
     - name: Install Poetry
       run: |
-          curl -fsS -o get-poetry.py https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py
-          python get-poetry.py -y
-          echo "::set-env name=PATH::$HOME/.poetry/bin:$PATH"
+          python -m pip install poetry
     - name: Configure poetry
       run: poetry config virtualenvs.in-project true
     - name: Install dependencies
@@ -35,5 +33,5 @@ jobs:
     - name: Publish
       env: ${{ secrets.PYPI_API_TOKEN }}
       run: |
-         poetry config pypi-token.pypi $PYPI_API_TOKEN
-         poetry publish --build
+         python -m poetry config pypi-token.pypi $PYPI_API_TOKEN
+         python -m poetry publish --build
